Fix tooltips being stuck after having clicked them once

--- a/public/resources/css/index.css
+++ b/public/resources/css/index.css
@@ -73,6 +73,7 @@ a.no-underline{
 .tippy-explanation{
     color: rgba(255, 255, 255, 0.8);
     margin-bottom: 4px;
+    white-space: normal;
 }
 
 a{
